# bsort

./: .gitignore  Dockerfile  README.md  pyproject.toml  settings.yaml
.github/workflows/: ci.yml
models/: .gitkeep
notebooks/: Bsort.ipynb
src/bsort/: __init__.py  cli.py  config.py  infer.py  train.py
tests/: test_bsort.py
